<resources>
    <string name="app_name">binary_octal_decimal_hexa_calculator</string>
    <string name="_3_hr">3 Hr</string>
    <string name="_5_0">5.0</string>
    <string name="reviews">(∞ reviews)</string>
    <string name="eg">EG</string>
    <string name="engineer">Engineer</string>
    <string name="hanafi_zaglol">Hanafi Zaglol</string>
    <string name="_5_days_ago">5 days ago</string>
    <string name="egyptian">Egyptian</string>
</resources>