<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/holder_card">

       <androidx.cardview.widget.CardView
           android:layout_width="93dp"
           android:layout_height="93dp"
           app:cardCornerRadius="8dp"
           android:layout_marginStart="12dp"
           android:layout_marginTop="12dp"
           android:layout_marginBottom="12dp">

        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:background="@drawable/cat_mechanic"/>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/hanafi_zaglol"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/engineer"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/eg"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:text="@string/reviews"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:text="@string/_5_0"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_star_24"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="21dp"
            android:gravity="right"
            android:orientation="vertical"
            android:layout_marginEnd="12dp">

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/_3_hr"
                android:textAlignment="center"
                android:background="@drawable/small_num_shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/egyptian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/_5_days_ago"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>